# Py-Ritone

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  run_dev_client.bat
python/: README.md  example.py  example_async.py  example_sync.py  pyproject.toml  test.py
python/demos/: 01_connect_discovery.py  01_nearest_entity_walk.py  02_basic_commands.py  02_on_events_chat.py  03_goto_completion.py  04_live_event_feed.py  05_cancel_task.py  06_settings_mode_switch.py  07_mini_console.py  08_async_workflow.py  09_build_file_local_path.py  10_cli_entrypoints.py  README.md  _common.py  pyritone.schematic  test.schematic
python/docs/: async-client.md  baritone-commands.md  baritone-typed-parity.md  cli.md  connection-and-discovery.md  errors-and-troubleshooting.md  index.md  migration-from-legacy-aliases.md  quickstart.md  release-parity-fallback-report.md  rework-capability-inventory.md  settings-api.md  sync-client.md  tasks-events-and-waiting.md
python/docs/commands/: aliases.md  build.md  control.md  info.md  navigation.md  waypoints.md  world.md
python/src/pyritone/: __init__.py  baritone.py  cli.py  client_async.py  client_event.py  discovery.py  (+5 more)
python/tests/: test_async_client.py  test_baritone_wave7_wrappers.py  test_build_file_helpers.py  test_commands_api.py  test_demo_common.py  test_discovery.py  test_docs_generation.py  test_event_client.py  test_fallback_debt.py  test_logging.py  test_minecraft_constants.py  test_protocol.py  test_settings_api.py  test_sync_client_wait.py
python/tools/: generate_baritone_commands.py
(+73 files in other folders)
