[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pyritone"
version = "0.1.0"
description = "Python client for the Py-Ritone Baritone bridge"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Py-Ritone" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23"
]

[project.urls]
Homepage = "https://github.com/GSstarGamer/Py-Ritone"
Repository = "https://github.com/GSstarGamer/Py-Ritone"

[project.scripts]
pyritone = "pyritone.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pyritone"]

[tool.hatch.build.targets.sdist]
include = [
  "src/pyritone",
  "tests",
  "pyproject.toml",
  "README.md",
  "tools",
  "docs"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
asyncio_mode = "auto"

